[package]
name = "tracing-actix-web2"
description = "Rust tracing adapter for Actix Web"
version = "1.0.0"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2018"
license = "MIT"

homepage = "https://github.com/LukeMathWalker/tracing-actix-web"
documentation = "https://docs.rs/tracing-actix-web2"
repository = "https://github.com/LukeMathWalker/tracing-actix-web"
readme = "README.md"

keywords = ["http", "actix-web", "tracing", "logging"]
categories = ["asynchronous", "web-programming"]

[dependencies]
futures = "0.3.15"
actix-web = "3.3.2"
tracing = "0.1.26"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
